[package]
name = "remoteid-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imxrt-hal = { version = "0.5.4", features = ["imxrt1020"] }
imxrt-iomuxc = { version = "0.2.5", features = ["imxrt1020"] }
imxrt-ral = { version = "0.5.3", features = ["imxrt1021", "rt"] }
imxrt-rt = { version = "0.1.3", features = ["device"] }
panic-halt = "0.2.0"

[target.thumbv7em-none-eabihf]
runner = [
    "probe-rs", "run",
    "--chip=imxrt1021",
    "--target=target/thumbv6m-none-eabi/release/remoteid-module",
]

[build-dependencies]
imxrt-rt = { version = "0.1.3", features = ["device"] }
